[package]
name = "ploke-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ploke-common = { path = "../common" }
# syn_parser is now a required dependency
syn_parser = { path = "../ingest/syn_parser" }
# Core types are now always needed
ploke-core = { path = "../ploke-core" } # Needed for Uuid types if test-utils uses them directly
# common error types for workspace
ploke-error = { path = "../ploke-error" }

ploke-transform = { path = "../ingest/ploke-transform" }

cozo = { workspace = true }

tokio = { workspace = true }

uuid = { workspace = true, features = ["v5", "serde"] }
serde = { workspace = true, features = ["derive"] }
proc-macro2 = { workspace = true, features = ["span-locations"] }
log = { workspace = true }
ploke-db = { path = "../ploke-db" }


tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
chrono = "0.4"

[dev-dependencies]

[features]
default = ["test_setup"]
multi_embedding_test = ["ploke-db/multi_embedding_db"]
test_setup = []
# Feature flag for the UUID refactor in test-utils (REMOVED)
