[package]
name = "ploke-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
ploke-db = { path = "../../ploke-db" }
ploke-io = { path = "../../ploke-io" }
ploke-core = { path = "../../ploke-core" }
ploke-llm = { path = "../../ploke-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }

# network
reqwest = "0.12"

# temporary, for testing, maybe remove later when we have more integration tests?
# maybe use ploke-db instead?
cozo = { workspace = true }
ploke-transform = { path = "../ploke-transform" }

# concurrency
tokio = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }

# error handling
thiserror = { workspace = true }
ploke-error = { path = "../../ploke-error" }
tracing = { workspace = true }

# local embedding
candle-core = "0.9"
candle-transformers = "0.9"
candle-nn = "0.9"
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.21"

[dev-dependencies]
ploke-test-utils = { path = "../../test-utils" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
httpmock = "0.7"
once_cell = "1"


[features]
default = ["debug"]
debug = []
update_embeds = []
live_api_tests = []
parity_live_tests = []
