[package]
name = "ploke-transform"
version = "0.1.0"
edition = "2024"

[dependencies]
cozo = { workspace = true }
syn_parser = { path = "../syn_parser" }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
ploke-core = { path = "../../ploke-core" }
ploke-common = { path = "../../common" }
uuid = { workspace = true }

# debugging
tracing = { workspace = true }

#error handling
ploke-error = { path = "../../ploke-error" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"                                                         # Add env_logger for test logging
ploke-db = { path = "../../ploke-db" }
ploke-test-utils = { path = "../../test-utils", features = ["test_setup"] }

[[bench]]
name = "transform_pipeline"
harness = false

[features]
default = ["type_bearing_ids"]
debug = []
type_bearing_ids = []
# get relations to have a mapping to higher level abstractions.
level_up_relations = []
