[package]
name = "syn_parser"
version = "0.1.0"
edition = "2021"
description = "A Rust code parser and analyzer using syn"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Parsing and code generation
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }

# Concurrency and parallelism
rayon = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }

# Data structures and algorithms
petgraph = { workspace = true }
cozo = { workspace = true }
# uuid is now an optional transitive dependency via ploke-core
uuid = { workspace = true, features = ["v5", "serde"] }

# Error handling
thiserror = { workspace = true }                          # version 2
ploke-common = { path = "../../common" }
ploke-core = { path = "../../ploke-core", features = [] }
syn_parser_macros = { path = "../syn_parser_macros" }     # Add dependency on the
anyhow = "1.0"

# Added for Phase 1 Discovery (Optional)
toml = { version = "0.8" }
walkdir = { version = "2.4" }

parse_cfg = "4.1.1"
# target-lexicon = "0.13"         # Removed: Not needed until Phase 3/RAG

# debugging
log = { workspace = true }
colored = "3.0"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.10"     # For creating temporary files/dirs in tests
env_logger = "0.11"   # Add env_logger for test logging
lazy_static = "1.4.0" # Added lazy_static
ploke-test-macros = { path = "../ploke-test-macros" } # for tests

# Feature flags
[features]
default = ["type_bearing_ids", "validate", "reexport", "not_wip_marker"]
feature_a = []                                                           # Add feature_a used by fixture
feature_b = []                                                           # Add feature_b used by test
verbose_debug = []
# temporary transition cfg to allow comparison of
# functionality with previous, non-type-bearing implementation. Will eventually
# completely replace the original implementation, at which time this cfg should
# be removed.
temp_target = []
not_wip_marker = []
type_bearing_ids = []
validate = []
mod_tree_cfg = []
reexport = []
# Post-MVP feature
workspace_vis = []

