# Why don't sheep remember people's birthdays? Because they always go "bah bah" instead of "baba"!
[package]
name = "fixture_nodes"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs" # Add this

[dependencies]
serde = { version = "1.0", features = ["derive"] } # Add serde dependency

[features]
default = ["fixture_nodes_cfg"]
fixture_nodes_cfg = []
