[workspace]
members = [
    "member_closure_const_repro",
    "member_const_repro",
    "member_if_branch_local_consts_repro",
    "member_local_function_repro",
    "member_method_local_consts_repro",
    "member_repro",
    "member_static_repro",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
