[workspace]
members = [
    "member_cfg_test_mods_repro",
    "member_closure_const_repro",
    "member_const_repro",
    "member_cfg_duplicate_mods_repro",
    "member_image_inline_file_repro",
    "member_quantized_metal_repro",
    "member_if_branch_hard_line_break_consts_repro",
    "member_if_branch_local_consts_repro",
    "member_local_function_repro",
    "member_method_collection_flags_repro",
    "member_method_local_consts_repro",
    "member_path_stem_collision_repro",
    "member_logging_inline_file_repro",
    "member_protos_default_index_repro",
    "member_scheduler_queue_repro",
    "member_tls_branch_h2_consts_repro",
    "member_repro",
    "member_static_repro",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
